# Computer-Vision

./: README.MD  README.md
Laboratory2/Documents/: Report.tex
Laboratory2/Task1/: CMakeLists.txt  task1.cpp
Laboratory2/Task2/: CMakeLists.txt  filters.cpp  filters.h  task2.cpp
Laboratory2/Task3/: CMakeLists.txt  task3.cpp
Laboratory2/Task4/: CMakeLists.txt  task4.cpp
Laboratory2/Task5/: CMakeLists.txt  task5.cpp
Laboratory4/: README.MD
Laboratory4/Documents/: ReportLab4.tex
Laboratory4/Task1/: CMakeLists.txt
Laboratory4/Task1/include/: HandlerTrackbars.h
Laboratory4/Task1/source/: HandlerTrackbars.cpp  task1.cpp
Laboratory4/Task2/: CMakeLists.txt
Laboratory4/Task2/include/: RoadLinesDetector.h
Laboratory4/Task2/source/: RoadLinesDetector.cpp  task2.cpp
Laboratory4/Task3/: CMakeLists.txt
Laboratory4/Task3/source/: task3.cpp
Laboratory4/Task4/: CMakeLists.txt
Laboratory4/Task4/source/: task4.cpp
Laboratory5/: README.MD
Laboratory5/Documents/: reportlab5.tex
Laboratory5/Task1/: CMakeLists.txt
Laboratory5/Task1/source/: task1.cpp
Laboratory5/Task2/: CMakeLists.txt
Laboratory5/Task2/source/: Helper.cpp  task2.cpp
Laboratory5/Task3/: CMakeLists.txt
Laboratory5/Task3/include/: Helper.h
Laboratory5/Task3/source/: task3.cpp
Laboratory7/: CMakeLists.txt  README.MD
Laboratory7/Documents/: main.tex
Laboratory7/include/: panoramic_utils.h  stiching_utils.h
Laboratory7/source/: main.cpp  panoramic_utils.cpp  stiching_utils.cpp
Laboratory8/: CMakeLists.txt  README.MD
Laboratory8/Documents/: main.tex
Laboratory8/include/: utils.h
Laboratory8/source/: main.cpp  utils.cpp
